add search screen and logic

--- a/lib/core/languages/l10n/ar.arb
+++ b/lib/core/languages/l10n/ar.arb
@@ -20,5 +20,18 @@
     "promoCode": "رمز ترويجي",
     "apply": "تطبيق",
     "noResults": "لا توجد رحلات مطابقة",
-    "home": "الرئيسية"
+    "home": "الرئيسية",
+    "bookYourFlight": "احجز رحلتك",
+    "enterFirstCity": "اكتب المدينة",
+    "selectDateAndTime": "اختر التاريخ ",
+    "travelers": "الركاب",
+    "yourClass": "الفئة",
+    "searchFlights": "بحث عن رحلات",
+    "departe": "قيام",
+    "arrive": "الوصول",
+    "viewMore": " مشاهدة المزيد",
+    "flightsAvailable": "الرحلات المتاحة",
+    "selectClass": "اختر الفئة",
+    "selectTripType": "اختر نوع الرحلة",
+    "startSearch":"ابحث اولا لترى النتائج !"
 }
